# dayzops

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  implementation-notes.md  installation.md  operations.md
docs/adr/: 0001-single-source-of-truth.md  0002-systemd-over-cron.md  0003-symlink-based-mod-management.md  0004-full-key-rebuild-strategy.md  0005-backup-and-recovery-strategy.md  0006-atomic-update-workflow.md  0007-mod-order-generation.md  0008-client-vs-server-mods.md  0009-global-locking-strategy.md  0010-state-inventory-management.md  README.md
examples/: server.yaml
scripts/: install.sh  uninstall.sh
src/dayzops/: __main__.py  app.py  apply.py  backup.py  cli.py  config.py  constants.py  fsperm.py  health.py  keys.py  lock.py  logger.py  mods.py  ops.py  state.py  steamcmd.py  systemd.py  templates_render.py  validators.py  verify.py
src/dayzops/templates/: server.yaml.template
tests/: test_app.py  test_apply.py  test_backup.py  test_cli.py  test_config.py  test_convenience.py  test_fsperm.py  test_health.py  test_keys.py  test_lock.py  test_logger.py  test_mods.py  test_ops.py  test_prune.py  test_state.py  test_steamcmd.py  test_systemd.py  test_templates_render.py  test_verify.py
