[project]
name = "dayzops"
version = "1.0.0"
description = "Declarative DayZ server operations platform"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Edson Batista" }
]

dependencies = [
    "PyYAML>=6.0"
]

[project.scripts]
dayzops = "dayzops.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Empacotar o template canônico do server.yaml junto com o pacote.
# Necessário para `dayzops render-config` funcionar quando instalado via pip
# (sem o repo presente na máquina) — caso típico do install.sh em servidores.
dayzops = ["templates/*.template"]